# tooldesk

./: AGENTS.md  CHANGELOG.md  README.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml  test.js
.github/workflows/: release.yml
scripts/: bump-version.sh  svg-to-icon.mjs
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  capabilities.js  tauri.conf.json  test.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pdf.rs
