[package]
name = "desktool"
version = "1.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
printpdf = { version = "=0.8.2", features = ["png", "jpeg", "bmp", "webp", "gif", "tiff"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
if-addrs = "0.13"
